refs #37343 「住宅改修支給申請審査」PH3